1. 把参数操作，请求操作，断言操作结合起来，返回最终用例执行结果 2.结合pytest运行用例

--- a/case/test.yaml
+++ b/case/test.yaml
@@ -25,6 +25,10 @@
    ["'12' in '123'", '"ig" == "$.ig"']
 
 
+
+# {
+#    "waybill_no": "lj520"
+#}
 获取运单号:
   path: /get_waybill_no
   method: get
